# wave-gre-flow-comp

./: .gitignore  README.md  pyproject.toml
docs/: reconstruction.md  sequence.md  troubleshooting.md
recon/: recon_wave_gre_from_twix_integrated_nifti.py
recon/utils/: nifti_export_twix.py
seq/: gre_3d_wave_with_flash_calibration.m
seq/utils/: addModuleGap.m  addPrepModule.m  addReadoutBlockNoAdc.m  addReadoutBlockWithAdc.m  calcInitialCosHeadMoments.m  calcInterEchoCosExternalMoments.m  calcInterEchoPostGapToReadoutStart.m  centerBlockIndices.m  concatenateTwoTrapezoids.m  configurePathSettings.m  continuousMomentFromPolyline.m  continuousMomentFromPolylineWindow.m  cosineTimingPolyline.m  defineCosineReadoutWave.m  defineCosineWaveGradient4Calib.m  defineSineReadoutWave.m  defineSineWaveGradient4Calib.m  designMinDurationM0M1LobeRefStart.m  designWaveAmplitude.m  ensureTrailingFilesep.m  fillInterEchoYFCScaledWaveforms.m  forceLength.m  makeAcceleratedIndexList.m  makeCenterIndexList.m  makeExtendedTrapezoidAndWaveform.m  makeExtendedTrapezoidAndWaveform4Calib.m  makeFixedDurationPreRamp.m  makeFixedDurationPreRamp4Calib.m  makeM0M1LobeRefStart.m  makeM0PreservingM1CorrectedLobe.m  makeShortestEndpointRampWave.m  makeZeroAreaM1FourPointFC.m  normalizeUserPath.m  promptYesNoFromWorkspace.m  selectStringOption.m  trapezoidCorners.m  updateRfAndAdcPhase.m
