[project]
name = "wave-gre-flow-comp"
version = "0.1.0"
description = "Research code for MATLAB Wave-GRE sequence generation and Python reconstruction"
requires-python = ">=3.11,<3.14"
dependencies = []

[dependency-groups]
recon = [
    "matplotlib>=3.8",
    "nibabel>=5.2",
    "numpy>=1.26,<3",
    "pymapvbvd>=0.6.1",
    "pypulseq>=1.4.2",
    "scipy>=1.11",
    "sigpy>=0.1.27",
    "torch>=2.2",
]
gpu = [
    { include-group = "recon" },
    "cupy-cuda12x>=13",
]

[tool.uv]
package = false
default-groups = ["recon"]
